refactor directories